Updates for InstallUtilities.java and changed pom.xml version to 4.1.1 to differentiate from 4.1.0